# mem0-mcp

./: .dockerignore  .env  .gitignore  Dockerfile  main.py  mem0-start.sh  package-lock.json  package.json  plan.md  pyproject.toml
.github/workflows/: deploy.yml  deploy.~yml
cdk/: app.py  cdk.json  cdk_stack.py
cdk/cdk/: cdk_stack.py
