[project]
name = "mem0-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
    "mem0ai>=0.1.55",
    "aws-cdk-lib~=2.199.0",
    "constructs~=10.4.0"
]

# Added build-system specification
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

# Added setuptools configuration to guide package discovery
[tool.setuptools.packages.find]
exclude = [
    "cdk",       # Exclude the cdk directory
    "cdk.*",     # Exclude anything under cdk if treated as a package
    "node",      # Exclude the node directory
    "node.*",    # Exclude anything under node
    "tests",     # Standard practice to exclude tests from the package
    "tests.*"
]
